# finance-aggregator-il

./: .dockerignore  .gitignore  .vulture_whitelist.py  CLAUDE.md  CLI_PLAN.md  Dockerfile  Makefile  README.md  SCRAPER_REFACTORING_PLAN.md  SERVICE_REFACTORING_PLAN.md  TAGGING_DESIGN.md  cal_scrapper  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
.claude/: codemap.md
.claude/commands/: add-to-claude-md.md  code-reviewer.md  dead-code.md  review-claude-md.md  update-codemap.md  update-docs.md
.claude/rules/: python-unit-tests.md
.cursor/rules/: python-expert.mdc  python-uts.mdc
.github/workflows/: update-codemap.yml
api/: auth.py  deps.py  main.py
api/routers/: accounts.py  analytics.py  auth_router.py  balances.py  budget.py  categories.py  dividends.py  retirement.py  rules.py  sync.py  tags.py  transactions.py
api/schemas/: accounts.py  analytics.py  auth.py  balances.py  budget.py  categories.py  common.py  dividends.py  retirement.py  rules.py  sync.py  tags.py  transactions.py
cli/: __init__.py  main.py  utils.py
cli/commands/: __init__.py  accounts.py  auth.py  budget.py  categories.py  config.py  export.py  init.py  maintenance.py  reports.py  rules.py  sync.py  tags.py  transactions.py
cli/tui/: __init__.py  browser.py
config/: __init__.py  constants.py  settings.py
db/: __init__.py  database.py  models.py  query_utils.py
db/migrations/: add_indexes.py
examples/: __init__.py  example_cal_usage.py
plans/: ANALYTICS_EXPANSION_PLAN.md  APP_UX_REVIEW.md  CALCULATOR_REVERSE_ENGINEERING.md  CATEGORY_NORMALIZATION_PLAN.md  CLI_PLAN.md  CODE_AUDIT_PLAN.md  CSS_CONSOLIDATION_PLAN.md  HUB_LANDING_PAGE_PLAN.md  INTEGRATION_TESTING_PLAN.md  MOBILE_FIRST_PLAN.md  MULTI_ACCOUNT_PLAN.md  NLP_CATEGORIZATION_PLAN.md  REACT_MIGRATION_PLAN.md  REPORTING_CRITICAL_FEATURES.md  REPORTING_FUTURE_FEATURES.md  SCRAPERS.md  SCRAPER_REFACTORING_PLAN.md  SERVICE_REFACTORING_PLAN.md  STREAMLIT_UI_PLAN.md  TAGGING_DESIGN.md  TESTING_PLAN.md  UI_UX_IMPROVEMENTS.md
scrapers/: __init__.py  exceptions.py
scrapers/base/: __init__.py  broker_base.py  email_retriever.py  mfa_handler.py  pension_automator.py  pension_base.py  selenium_driver.py  web_actions.py
scrapers/brokers/: __init__.py  excellence_broker_client.py  meitav_broker_client.py
scrapers/config/: __init__.py  logging_config.py
scrapers/credit_cards/: __init__.py  base_scraper.py  cal_credit_card_client.py  isracard_credit_card_client.py  max_credit_card_client.py  shared_helpers.py  shared_models.py
scrapers/pensions/: __init__.py  migdal_pension_client.py  phoenix_pension_client.py
scrapers/utils/: __init__.py  retry.py  wait_conditions.py
scripts/: backfill_migdal_balances.py  codemap_nudge.py  extract_haircuts.py  generate_codemap.py  retirement_analysis.py  run_server.sh
services/: __init__.py  analytics_service.py  base_service.py  broker_service.py  budget_service.py  category_service.py  credit_card_service.py  dividend_service.py  pension_service.py  retirement_calculator.py  retirement_scenario_service.py  rules_service.py  tag_service.py
streamlit_app/: DARK_MODE_GUIDELINES.md  app.py  auth.py  main.py  mobile_dashboard.py
tests/: conftest.py  test_retirement_calculator.py
web/: Dockerfile  index.html  nginx.conf  vite.config.ts
web/src/: App.tsx  (+1 more)
(+148 files in other folders)
